--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
-    <title>Framengo</title>
+    <title>A Origem do Flamengo</title>
 </head>
 <body>
     <div class="cabecalho">
         <h1 class="titulo">UMA VEZ FRAMENGO, SEMPRE FRAMENGO</h1>
     </div>
-    <img id="imagem" src="framengo.jpeg"> 
+    <an>
+        <img id="imagem" src="framengo.jpeg">
+        <div class="historia">
+            <h2 class="texto">
+                A equipe de futebol do Flamengo foi criada em decorrência de
+                uma desavença em seu rival Fluminense, em 1911. O atleta Alberto Borgerth,
+                que jogava futebol no Fluminense e remava no Flamengo, propôs a criação de uma seção de futebol
+                no clube de regatas e foi assim que nasceu o Departamento de Esportes Terrestres 4.
+            </h2>
+        </div>
+    </an>
 </body>
 </html>
