--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
         <h1 class="titulo">UMA VEZ FRAMENGO, SEMPRE FRAMENGO</h1>
     </div>
     <an>
-        <img id="imagem" src="framengo.jpeg">
         <div class="historia">
-            <h2 class="texto">
+            <h1 class="texto">Como Surgiu o Tme de Futebol do Flamengo</h1>
+            <img id="imagem" src="framengo.jpeg">
+            <p class="texto">
                 A equipe de futebol do Flamengo foi criada em decorrência de
                 uma desavença em seu rival Fluminense, em 1911. O atleta Alberto Borgerth,
                 que jogava futebol no Fluminense e remava no Flamengo, propôs a criação de uma seção de futebol
                 no clube de regatas e foi assim que nasceu o Departamento de Esportes Terrestres 4.
-            </h2>
+            </p>
+        </div>
+        <div class="Idolos">
+
         </div>
     </an>
 </body>
