--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 no clube de regatas e foi assim que nasceu o Departamento de Esportes Terrestres 4.
             </p>
         </div>
-        <div class="Idolos">
+        <div class="Tittulos">
+            //e nao deu tempo
 
         </div>
     </an>
