--- a/index.html
+++ b/index.html
@@ -12,28 +12,27 @@
 </head>
 <body>
     <div class="cabecalho">
-        <h1 class="titulo">UMA VEZ FRAMENGO, SEMPRE FRAMENGO</h1>
+        <h1 class="fonte">UMA VEZ FRAMENGO, SEMPRE FRAMENGO</h1>
     </div>
-    <an>
-        <div class="historia">
-            <h1 class="texto">Como Surgiu o Time de Futebol do Flamengo</h1>
-            <img id="imagem" src="framengo.jpeg">
-            <p class="texto">
-                A equipe de futebol do Flamengo foi criada em decorrência de
-                uma desavença em seu rival Fluminense, em 1911. O atleta Alberto Borgerth,
-                que jogava futebol no Fluminense e remava no Flamengo, propôs a criação de uma seção de futebol
-                no clube de regatas e foi assim que nasceu o Departamento de Esportes Terrestres.
-            </p>
-        </div>
-        <div class="Tittulos">
-            <h2>Todos os Titulos</h2>
-            <li>INTERNACIONAIS
-                Mundial interclubes - 1981
-                Taça Libertadores da América - 1981, 2019 e 2022
-                Copa Mercosul - 1999
-                Copa Ouro Sul-americana - 1996 (invicto)
-                Recopa Sul-Americana - 2020
-            </li>
+
+    <div class="historia">
+        <h1 class="fonte">Como Surgiu o Time de Futebol do Flamengo</h1>
+        <img id="imagem" src="framengo.jpeg">
+        <p class="texto">
+            A equipe de futebol do Flamengo foi criada em decorrência de
+            uma desavença em seu rival Fluminense, em 1911. O atleta Alberto Borgerth,
+            que jogava futebol no Fluminense e remava no Flamengo, propôs a criação de uma seção de futebol
+            no clube de regatas e foi assim que nasceu o Departamento de Esportes Terrestres.
+        </p>
+    </div>
+    <div class="titulos">
+        <h2 class="fonte">Todos os Titulos</h2>
+        <li class="texto">INTERNACIONAIS</li>
+        <li class="texto">Mundial interclubes - 1981</li>
+        <li class="texto">Taça Libertadores da América - 1981, 2019 e 2022</li>
+        <li class="texto">Copa Mercosul - 1999</li>
+        <li class="texto">Copa Ouro Sul-americana - 1996 (invicto)</li>
+        <li class="texto">Recopa Sul-Americana - 2020</li>
         </div>
     </an>
 </body>
