--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;600&display=swap" rel="stylesheet">
     <title>A Origem do Flamengo</title>
 </head>
 <body>
@@ -25,15 +29,23 @@
             no clube de regatas e foi assim que nasceu o Departamento de Esportes Terrestres.
         </p>
     </div>
+
     <div class="titulos">
         <h2 class="fonte">Todos os Titulos</h2>
-        <li class="texto">INTERNACIONAIS</li>
+        <h3 class="titulo">INTERNACIONAIS</h3>
         <li class="texto">Mundial interclubes - 1981</li>
         <li class="texto">Taça Libertadores da América - 1981, 2019 e 2022</li>
         <li class="texto">Copa Mercosul - 1999</li>
         <li class="texto">Copa Ouro Sul-americana - 1996 (invicto)</li>
         <li class="texto">Recopa Sul-Americana - 2020</li>
-        </div>
-    </an>
+ 
+        <h3 class="titulo">NACIONAIS</h3>
+        <li class="texto">Brasileirão - 1980, 1982, 1983, 1992, 2009, 2019 e 2020</li>
+        <li class="texto">Copa União - 1987</li>
+        <li class="texto">Copa do Brasil - 1990, 2006, 2013 e 2022</li>
+        <li class="texto">Supercopa do Brasil - 2020 e 2021</li>
+        <li class="texto">Copa dos Campeões - 2001</li>
+    </div>
+    <img id="imagem2" src="trofeus.jpg">
 </body>
 </html>
